cluster/security/gatekeeper/policies/constraints/nonroot.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNonRoot
metadata:
  name: pods-must-run-as-nonroot
spec:
  match:
    excludedNamespaces:
      - kube-system
      - flux-system
      - cert-manager
      - infra
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
